--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
+    "@angular/fire": "^7.5.0",
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^15.2.0",
-    "@angular/material": "^15.2.4",
+    "@angular/material": "^16.0.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@ngrx/effects": "^15.4.0",
     "@ngrx/store": "^15.4.0",
     "@ngrx/store-devtools": "^15.4.0",
+    "@types/stripe-v3": "^3.1.28",
     "rxjs": "~7.8.0",
+    "stripe-angular": "^1.9.3",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
