fix: Fix store implementation and add currency switch

--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@material/typography": "^15.0.0-canary.51f9c0c28.0",
     "@ngrx/effects": "^15.4.0",
     "@ngrx/store": "^15.4.0",
     "@ngrx/store-devtools": "^15.4.0",
+    "@stripe/stripe-js": "^1.53.0",
     "@types/stripe-v3": "^3.1.28",
+    "ngx-stripe": "^16.1.0",
     "rxjs": "~7.8.0",
     "stripe-angular": "^1.9.3",
     "tslib": "^2.3.0",
